--- a/src/main/resources/assets/dj2addons/lang/en_us.lang
+++ b/src/main/resources/assets/dj2addons/lang/en_us.lang
@@ -7,6 +7,4 @@ dj2addons.brew.saturegen=Fullness
 
 # Commands
 dj2addons.commands.desc=§2/ct dj2addons [category] §3Dumps data relevant to CraftTweaker extensions.
-dj2addons.commands.usage=Usage: §2/ct dj2addons [mod] §3Mods: all | bewitchment | totemic
-dj2addons.commands.header.bewitchment.rituals=Bewitchment ritual IDs:
-dj2addons.commands.header.totemic.instruments=Totemic instrument IDs:
+dj2addons.commands.usage=Usage: §2/ct dj2addons [arg] §3Args: hand | mods | bewitchment | totemic
