Revised CommandHandler.java, added log messages, removed dj2addons crafttweaker loader, added XU hooks, removed getXData methods in CTReactorInterior.java due to adding commands for them.

--- a/src/main/resources/assets/dj2addons/lang/en_us.lang
+++ b/src/main/resources/assets/dj2addons/lang/en_us.lang
@@ -6,5 +6,5 @@ dj2addons.brew.saturegen=Fullness
 
 
 # Commands
-dj2addons.commands.desc=§2/ct dj2addons [category] §3Dumps data relevant to CraftTweaker extensions.
-dj2addons.commands.usage=Usage: §2/ct dj2addons [arg] §3Args: hand | mods | bewitchment | totemic
+dj2addons.commands.desc=§2/ct dj2addons [category] §3Prints data relevant to CraftTweaker extensions.
+dj2addons.commands.usage=Usage: §2/ct dj2addons [arg] §3Args: hand | mods | bewitchment | extrautils | totemic
