Fixed XU CT docs. Moved from own TextFormat class to MC's native TextFormatting enum.

--- a/src/main/resources/assets/dj2addons/lang/en_us.lang
+++ b/src/main/resources/assets/dj2addons/lang/en_us.lang
@@ -7,4 +7,4 @@ dj2addons.brew.saturegen=Fullness
 
 # Commands
 dj2addons.commands.desc=§2/ct dj2addons [category] §3Prints data relevant to CraftTweaker extensions.
-dj2addons.commands.usage=Usage: §2/ct dj2addons [arg] §3Args: hand | mods | bewitchment | extrautils | totemic
+dj2addons.commands.usage=Usage: §2/ct dj2addons [arg] §3Args: hand | mods | bewitchment | extrautils2 | totemic
