--- a/src/main/resources/assets/dj2addons/lang/en_us.lang
+++ b/src/main/resources/assets/dj2addons/lang/en_us.lang
@@ -10,3 +10,4 @@ dj2addons.brew.saturegen=Fullness
 dj2addons.commands.desc=§2/ct dj2addons [category] §3Prints data relevant to CraftTweaker extensions.
 dj2addons.commands.usage=Usage: §2/ct dj2addons [arg] §3Args: hand | tileinfo | mods | bewitchment | extrautils2 | totemic
 dj2addons.commands.dumpblock.usage=Usage: §2/ct dj2addons tileinfo [operation] (<X> <Y> <Z>) §3Operations: block | capabilities | dump (admins only)
+dj2addons.commands.dumpblock.dump.usage=Usage: §2/ct dj2addons tileinfo dump (<X> <Y> <Z>) (number of superclasses to scan [-1 = ∞])
