--- a/src/main/resources/assets/dj2addons/lang/en_us.lang
+++ b/src/main/resources/assets/dj2addons/lang/en_us.lang
@@ -11,4 +11,4 @@ dj2addons.commands.desc=§2/ct dj2addons [category] §3Prints data relevant to C
 dj2addons.commands.usage=Usage: §2/ct dj2addons [arg] §3Args: hand | info | mods | bewitchment | extrautils2 | totemic
 dj2addons.commands.info.usage=Usage: §2/ct dj2addons info [operation] (<X> <Y> <Z>) §3Operations: blockmeta | capabilities | class | dumptile (admins only)
 dj2addons.commands.info.capabilities.usage=Usage: §2/ct dj2addons info capabilities (<X> <Y> <Z>) 
-dj2addons.commands.info.tile.dump.usage=Usage: §2/ct dj2addons info dumptile [number of superclasses to scan (-1 = ∞)] (<X> <Y> <Z>) 
+dj2addons.commands.info.tile.dump.usage=Usage: §2/ct dj2addons info dumptile [stop | number of superclasses to scan (-1 = ∞)] (<X> <Y> <Z>)
